--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ovo&family=Quattrocento+Sans&display=swap');
 
+/* -- Global Styles -- */
+
 /* Set values used throughout the site as variables to allow for easy alteration */
 :root {
   --body-bg-colour: rgb(244, 245, 247);
+  --section-primary-colour: rgb(102, 190, 234);
 }
 
 /* Configure universal box-sizing to make box model layout calculations easier */
@@ -29,15 +32,20 @@ body {
   font-size: 1.2rem;
 }
 
-h1,
-.logo-heading {
+h1 {
   font-family: 'Ovo', serif;
 }
 
+/* Applies a background colour to only the sections of the page whose index is
+an even, producing and alternating colour scheme */
+section:nth-child(even){
+  background-color: var(--section-primary-colour);
+}
+
 /* Padding that will apply to all section elements */
-/* .section-padding {
-  
-} */
+section {
+  padding: 25px 5%;
+}
 
 /* -- Header - Logo and Navigation -- */
 
@@ -67,6 +75,7 @@ header {
 }
 
 .logo-heading {
+  font-family: 'Ovo', serif;
   font-size: 30px;
   font-weight: bolder;
   padding-top: 2px;
@@ -99,5 +108,9 @@ header {
     flex-direction: row;
     justify-content: space-between;
     padding: 20px 10%;
+  }
+
+  section {
+    padding: 6vh 10%;
   }
 }
