--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,13 @@ section {
   padding: 25px 5%;
 }
 
+/* -- Multiple use classes -- */
+
+.section-heading {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
 /* -- Standard buttons -- */
 
 .std-btn {
@@ -74,7 +81,7 @@ section {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3),
     2px 4px 4px rgba(0, 0, 0, 0.3),
     3px 6px 6px rgba(0, 0, 0, 0.3);
-    transition: all 250ms;
+  transition: all 250ms;
   user-select: none;
 }
 
@@ -140,7 +147,7 @@ header {
   border-bottom: 2px solid black;
 }
 
-/* Hero section */
+/* -- Hero section -- */
 
 #hero-section {
   text-align: center;
@@ -153,6 +160,25 @@ header {
 
 .hero-paragraph {
   font-size: 1.3rem;
+}
+
+/* -- Services section -- */
+
+#services-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  justify-content: center;
+
+}
+
+.service-item {
+  text-align: center;
+  flex-basis: 250px;
+}
+
+.service-item :not(:last-child) {
+  margin-bottom: 20px;
 }
 
 /* -- Media queries -- */
@@ -172,6 +198,11 @@ header {
 
   h3 {
     font-size: 1.953rem;
+  }
+
+  /* Increase to base paragraph size to give impact */
+  p {
+    font-size: 1.2rem;
   }
 
   /* Change layout of header to suit larger screens */
