--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,6 @@ header {
   flex-wrap: wrap;
   gap: 50px;
   justify-content: center;
-
 }
 
 .service-item {
@@ -183,6 +182,68 @@ header {
 
 .service-item-img {
   max-height: 100px;
+}
+
+/* -- Team section -- */
+
+#team-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  justify-content: center;
+}
+
+.team-item {
+  flex-basis: 300px;
+  background-color: var(--body-bg-colour);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.team-item-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  text-align: center;
+  padding: 20px;
+}
+
+.team-item-content-image {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.team-item-content-name {
+  font-weight: bold;
+}
+
+.team-item-content-role {
+  font-style: italic;
+}
+
+.team-item-content-intro {
+  margin-top: 20px;
+}
+
+.team-item-socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #f98530;
+}
+
+.team-item-socials a {
+  color: white;
+}
+
+.team-item-socials a:hover {
+  color: black;
 }
 
 /* -- Media queries -- */
