--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
 :root {
   --body-bg-colour: rgb(244, 245, 247);
   --section-primary-colour: rgb(102, 190, 234);
+  --pricing-section-standard-colour: rgb(189, 187, 250);
+  --pricing-section-highlight-colour: #f98530;
 }
 
 /* Configure universal box-sizing to make box model layout calculations easier */
@@ -198,7 +200,7 @@ header {
   background-color: var(--body-bg-colour);
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0px 0px 6px 6px rgba(58, 57, 57, 0.4);
+  box-shadow: 0px 0px 6px 6px rgba(32, 32, 32, 0.4);
 }
 
 .team-item-content {
@@ -250,6 +252,73 @@ header {
   color: black;
 }
 
+/* -- Pricing section -- */
+
+#pricing-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+
+.pricing-item {
+  width: 100%;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 10px;
+  border: 1px solid black;
+  box-shadow:
+    2px 4px 4px rgba(32, 32, 32, 0.22),
+    3px 6px 6px rgba(32, 32, 32, 0.22),
+    4px 8px 8px rgba(32, 32, 32, 0.22);
+}
+
+.pricing-item-heading {
+  border-bottom: 1px solid black;
+  background-color: var(--pricing-section-standard-colour);
+}
+
+.pricing-item-heading-title,
+.pricing-item-heading-cost {
+  display: block;
+  padding-top: 20px;
+  font-size: 1.563rem;
+}
+
+.pricing-item-heading-cost {
+  padding-bottom: 20px;
+}
+
+/* Pricing item emphasis - placed on promoted package */
+.pricing-item-emphasis span {
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+.pricing-item-emphasis .pricing-item-heading {
+  background-color: var(--pricing-section-highlight-colour);
+}
+
+.pricing-item-emphasis {
+  box-shadow: 2px 4px 4px rgba(32, 32, 32, 0.4),
+    3px 6px 6px rgba(32, 32, 32, 0.4),
+    4px 8px 8px rgba(32, 32, 32, 0.4);
+}
+
+.pricing-item-details {
+  padding: 20px;
+}
+
+.pricing-item-details li {
+  list-style-type: none;
+  padding: 5px;
+  line-height: 1.6em;
+}
+
+.pricing-item-details :not(:last-child) {
+  border-bottom: 1px solid rgba(58, 57, 57, 0.2);
+}
+
 /* -- Media queries -- */
 
 /* Medium devices (tablets, 768px and up) */
@@ -270,7 +339,8 @@ header {
   }
 
   /* Increase to base paragraph size to give impact */
-  p {
+  p,
+  li {
     font-size: 1.2rem;
   }
 
@@ -288,5 +358,16 @@ header {
 
   .hero-paragraph {
     font-size: 1.4rem;
+  }
+
+  /* Change layout of pricing grid to display in row */
+  #pricing-container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .pricing-item {
+    flex-basis: 300px;
   }
 }
