Feat: Add heading and button to pricing section
Added as call to action for this section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,11 +254,16 @@ header {
 
 /* -- Pricing section -- */
 
+#pricing-section{
+  text-align: center;
+}
+
 #pricing-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 50px;
+  margin-bottom: 50px;
 }
 
 .pricing-item {
