Style: Add testimonial section styling
Reused the styling of the team section by changing the team-container id
to a class.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,9 +186,9 @@ header {
   max-height: 100px;
 }
 
-/* -- Team section -- */
+/* -- Team and Testimonial section -- */
 
-#team-container {
+.team-container {
   display: flex;
   flex-wrap: wrap;
   gap: 50px;
