--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,10 @@
 
 /* Set values used throughout the site as variables to allow for easy alteration */
 :root {
-  --body-bg-colour: rgb(244, 245, 247);
-  --section-primary-colour: rgb(102, 190, 234);
-  --pricing-section-standard-colour: rgb(189, 187, 250);
-  --pricing-section-highlight-colour: #f98530;
+  --wild-sand: rgb(244, 245, 247);
+  --blue: rgb(102, 190, 234);
+  --light-purple: rgb(189, 187, 250);
+  --orange: rgb(249, 133, 48);
 }
 
 /* Configure universal box-sizing to make box model layout calculations easier */
@@ -56,7 +56,7 @@ h3 {
 /* Applies a background colour to only the sections of the page whose index is
 an even, producing and alternating colour scheme */
 section:nth-child(even) {
-  background-color: var(--section-primary-colour);
+  background-color: var(--blue);
 }
 
 /* Padding that will apply to all section elements */
@@ -78,8 +78,8 @@ section {
   font-size: 1.2em;
   padding: 15px;
   border-radius: 10px;
-  background-color: #f98530;
-  border: 2px solid #e2792d;
+  background-color: var(--orange);
+  border: 2px solid rgb(226, 121, 45);
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3),
     2px 4px 4px rgba(0, 0, 0, 0.3),
     3px 6px 6px rgba(0, 0, 0, 0.3);
@@ -197,7 +197,7 @@ header {
 
 .team-item {
   flex-basis: 300px;
-  background-color: var(--body-bg-colour);
+  background-color: var(--wild-sand);
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 0px 6px 6px rgba(32, 32, 32, 0.4);
@@ -238,7 +238,7 @@ header {
   gap: 20px;
   margin-top: 20px;
   padding: 20px;
-  background-color: #f98530;
+  background-color: var(--orange);
 }
 
 .team-item-socials a {
@@ -280,7 +280,7 @@ header {
 
 .pricing-item-heading {
   border-bottom: 1px solid black;
-  background-color: var(--pricing-section-standard-colour);
+  background-color: var(--light-purple);
 }
 
 .pricing-item-heading-title,
@@ -301,7 +301,7 @@ header {
 }
 
 .pricing-item-emphasis .pricing-item-heading {
-  background-color: var(--pricing-section-highlight-colour);
+  background-color: var(--orange);
 }
 
 .pricing-item-emphasis {
@@ -321,7 +321,7 @@ header {
 }
 
 .pricing-item-details :not(:last-child) {
-  border-bottom: 1px solid rgba(58, 57, 57, 0.2);
+  border-bottom: 1px solid rgba(57, 57, 57, 0.2);
 }
 
 /* Contact section */
@@ -365,7 +365,7 @@ header {
 #contact-container form textarea:focus,
 #contact-container form select:focus {
   outline: none;
-  box-shadow: 0 0 0 2px #f98530;
+  box-shadow: 0 0 0 2px var(--orange);
 }
 
 #contact-container form button {
