--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ header {
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  width: 100vw;
+  width: 100%;
   padding: 15px 0;
   border-bottom: 1px solid black;
 }
