Fix: Change css selector for section background
Incorrect selector :nth-child() replaced with :nth-of-type() to allow
elements to be placed between the sections without affecting indexing
and therefore section background colour.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ h3 {
 
 /* Applies a background colour to only the sections of the page whose index is
 an even, producing and alternating colour scheme */
-section:nth-child(even) {
+section:nth-of-type(odd) {
   background-color: var(--blue);
 }
 
