--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,6 +404,49 @@ header {
   align-self: center;
 }
 
+/* Modal window */
+
+.modal-window {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.25);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s;
+}
+
+.modal-window>div {
+  text-align: center;
+  width: 350px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  background: white;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+.modal-window:target {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modal-window header {
+  font-weight: bold;
+}
+
+.modal-window :not(:last-child) {
+  margin: 0 0 20px;
+}
+
 /* Footer */
 
 footer {
