--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ section {
   background: linear-gradient(to bottom, #ffba42, #fe750d);
   color: #000000;
   text-decoration: none;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .std-btn:hover,
@@ -379,7 +379,7 @@ header {
   border-radius: none;
   background-color: none;
   border: 1px solid black;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 #contact-container form textarea {
@@ -484,6 +484,41 @@ footer {
   padding: 0 5px;
 }
 
+/* Video section */
+
+/* Push footer to bottom of viewport */
+#video-section {
+  min-height: calc(100vh - 325px);
+}
+
+#video-content {
+  max-width: 560px;
+  max-height: 350px;
+  margin: 0 auto;
+}
+
+.embedtool {
+  position: relative;
+  height: 0;
+  padding-top: 56%;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embedtool iframe,
+.embedtool object,
+.embedtool embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.embedtool .fluid-vids {
+  position: initial !important
+}
+
 /* -- Media queries -- */
 
 /* Medium devices (tablets, 768px and up) */
@@ -540,6 +575,11 @@ footer {
 
   #footer-socials {
     order: 1;
+  }
+
+  /* Push footer to bottom of viewport */
+  #video-section {
+    min-height: calc(100vh - 226px);
   }
 }
 
