--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,11 +198,16 @@ header {
 
 /* -- Services section -- */
 
+#services-section {
+  text-align: center;
+}
+
 #services-container {
   display: flex;
   flex-wrap: wrap;
   gap: 50px;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .service-item {
@@ -495,6 +500,11 @@ footer {
   max-width: 560px;
   max-height: 350px;
   margin: 0 auto;
+  text-align: center;
+}
+
+#video-content iframe {
+  padding-bottom: 50px;
 }
 
 .embedtool {
