--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,8 @@ header {
   justify-content: center;
   gap: 10px;
   list-style-type: none;
+  font-size: 1.2rem;
+  padding: 0 10px;
 }
 
 #navigation-container a {
