--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,6 @@ section {
   border: 1px solid #b3822e;
   border-radius: 10px;
   background: #ffba42;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ffba42), to(#fe750d));
-  background: -moz-linear-gradient(top, #ffba42, #fe750d);
   background: linear-gradient(to bottom, #ffba42, #fe750d);
   color: #000000;
   text-decoration: none;
@@ -95,8 +93,6 @@ section {
 .std-btn:focus {
   border: 1px solid #ffba42;
   background: #ffdf4f;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ffdf4f), to(#ff8c10));
-  background: -moz-linear-gradient(top, #ffdf4f, #ff8c10);
   background: linear-gradient(to bottom, #ffdf4f, #ff8c10);
   color: #000000;
   text-decoration: none;
@@ -383,8 +379,6 @@ header {
   font-family: 'Quattrocento Sans', sans-serif;
   font-size: 1em;
   padding: 5px;
-  border-radius: none;
-  background-color: none;
   border: 1px solid black;
   cursor: pointer;
 }
@@ -444,7 +438,7 @@ header {
 .modal-window:target {
   visibility: visible;
   opacity: 1;
-  pointer-events: auto;
+  pointer-events: all;
 }
 
 .modal-window header {
@@ -649,6 +643,6 @@ footer {
 
 @media (prefers-reduced-motion: reduce) {
   html {
-    scroll-behavior: none;
+    scroll-behavior: auto;
   }
 }
