Refactor: Rename sections
Remove '-section' appended to the section name.

fixes issue #1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,7 @@ https://www.softr.io/tools/svg-wave-generator */
 
 /* -- Services section -- */
 
-#services-section {
+#services {
   text-align: center;
 }
 
@@ -289,7 +289,7 @@ https://www.softr.io/tools/svg-wave-generator */
 
 /* -- Pricing section -- */
 
-#pricing-section {
+#pricing {
   text-align: center;
 }
 
