--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,15 +474,28 @@ footer {
   font-size: 15px;
 }
 
-#footer-socials {
+.footer-socials {
   padding: 10px;
 }
 
-#footer-socials a {
+.footer-socials a {
   font-size: 25px;
-  color: black;
   text-decoration: none;
   padding: 0 5px;
+  transition: transform 2s;
+}
+
+.footer-socials a :hover,
+.footer-socials a :focus {
+  transform: scale(1.2, 1.2);
+}
+
+.footer-socials .fa-twitter {
+  color: rgb(29, 155, 240);
+}
+
+.footer-socials .fa-facebook {
+  color: rgb(24, 119, 242);
 }
 
 /* Video section */
@@ -597,7 +610,7 @@ max-width: 400px;
     padding: 15px 10%;
   }
 
-  #footer-socials {
+  .footer-socials {
     order: 1;
   }
 
