--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,22 @@ header {
   font-size: 1.3rem;
 }
 
+/* Back to top button */
+/* Credit: Code adapted from from w3schools tutorial - Scroll Back To Top Button:
+https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+#back-to-top-btn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 10;
+  padding: 0;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  font-size: 1.2em;
+}
+
 /* -- Section separation - wave (svg) -- */
 
 /* Credit: SVG generated using tool from softr -
